--- a/src/app/core/components/custom-made-art/custom-made.component.css
+++ b/src/app/core/components/custom-made-art/custom-made.component.css
@@ -7,3 +7,16 @@
     border: none; 
     outline: 0px; 
 }
+
+.clase{
+    margin-left: 8%;
+}
+.palabras{
+    margin-left: 4%;
+}
+.margen{
+    margin-left: 9%;
+}
+.prueba{
+    margin-left:4%;
+}
