--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -83,7 +83,7 @@
                     <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">Let’s get started 🦑:</p>
                     
                 <ul data-aos="fade-up" data-aos-duration="1800">
-                  <li class="mb-0"><span class="text-primary h5 me-2"></span>Name:</li> 
+                  <li class="mb-0"><span class="text-primary h5 me-2"></span>Namesss:</li> 
                   <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <!-- <li class="mb-0"><span class="text-primary h5 me-2"></span>Name: <input type = "text" required> </li>-->
                   <li class="mb-0"><span class="text-primary h5 me-2"></span>Last Name:</li>
@@ -133,7 +133,7 @@
             <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">CUSTOM MADE -ART-</h4>
-                <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2.What type of art are you interested in? </p>
+                <p class="text-muted  " data-aos="fade-up" data-aos-duration="1400">2.What type of art are you interested in? </p>
                    
                         
           <!-- Radio Buttons Start -->
@@ -186,17 +186,20 @@
                 <!--end row-->
               </div>
               <!--Contenedores -->
-               <div class="main-content" *ngIf="Contenedora2">
+              
+               <div class="main-content clase"  *ngIf="Contenedora2">
                 <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2a.What size are you thinking for this illustration? </p>
+               <div class=palabras>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                 <label class="form-check-label" for="flexCheckDefault"> Small (A4: 21 x 29.7 cm)</label>
+                 <label class="form-check-label " for="flexCheckDefault"> Small (A4: 21 x 29.7 cm)</label>
                  <br>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault"> Medium (A2: 42 x 59.4 cm)  </label>
                  <br>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                 <label class="form-check-label" for="flexCheckDefault">Large (A1: 59.4 x 84.1 cm)</label>
+                 <label class="form-check-label " for="flexCheckDefault">Large (A1: 59.4 x 84.1 cm)</label>
                  <br>
+              </div>
                  <span class="text-primary h5 me-2"></span>Other:
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <br>
@@ -231,8 +234,10 @@
                   <!--end col-->
                 </div>
                </div>
-               <div class="main-content" *ngIf="Contenedorb2">
+             
+               <div class="main-content clase" *ngIf="Contenedorb2">
                  <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2b.What size are you thinking for this hand painted work?</p>
+                 <div class=palabras>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault">Small (30cm x 40cm)</label>
                  <br>
@@ -244,6 +249,7 @@
                  <br>
                  <span class="text-primary h5 me-2"></span>Other:
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
+                 </div>
                  <div class="row align-items-center">
                   <div class="col-12">
                     <div class="d-flex align-items-center justify-content-between">
@@ -276,9 +282,10 @@
                 </div>
                  </div>
               </div>
-              <div class="main-content" *ngIf="Contenedorc2">
+              <div class="main-content prueba" *ngIf="Contenedorc2">
                   <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2c. What dimensions work best for this digital piece?   </p>
-                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                  <div class=palabras>
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault"> Small (30cm x 40cm)</label>
                  <br>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
@@ -290,6 +297,7 @@
                  <span class="text-primary h5 me-2"></span>Other:
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <br>
+                 </div>
                  <div class="row align-items-center">
                   <div class="col-12">
                     <div class="d-flex align-items-center justify-content-between">
@@ -321,8 +329,9 @@
                   <!--end col-->
                 </div>
               </div>
-              <div class="main-content" *ngIf="Contenedord2">
+              <div class="main-content prueba" *ngIf="Contenedord2">
                  <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2d. How big or small are you thinking? </p>
+                 <div class=palabras>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault"> Small (e.g., the size of a head pillow)</label>
                  <br>
@@ -335,6 +344,7 @@
                  <span class="text-primary h5 me-2"></span>Other:
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <br>
+                 </div>
                  <div class="row align-items-center">
                   <div class="col-12">
                     <div class="d-flex align-items-center justify-content-between">
@@ -366,8 +376,9 @@
                   <!--end col-->
                 </div>
                </div>
-               <div class="main-content" *ngIf="Contenedore2">
+               <div class="main-content prueba" *ngIf="Contenedore2">
                  <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2e. What size of photography are you thinking? </p>
+                 <div class=palabras>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault">Small (A4: 21 x 29.7 cm)</label>
                  <br>
@@ -380,6 +391,7 @@
                  <span class="text-primary h5 me-2"></span>Other:
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <br> 
+                </div>
                  <div class="row align-items-center">
                   <div class="col-12">
                     <div class="d-flex align-items-center justify-content-between">
@@ -411,7 +423,7 @@
                   <!--end col-->
                 </div>
                </div>
-               <div class="main-content" *ngIf="Contenedorf2">
+               <div class="main-content clase" *ngIf="Contenedorf2">
                 <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2f. This sounds like a very special artwork, tell us more about it! Don’t forget to mention size:</p>
                 <br>
                  <span class="text-primary h5 me-2"></span>Other:
@@ -637,9 +649,10 @@
         <!-- Radio Buttons End -->
                 
               </div>
-              <div class="main-content" *ngIf="Contenedora4">
+              <div class="main-content clase " *ngIf="Contenedora4">
              <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4a. Outdoors can mean many things, so for us it’s important to know about the elements that will interact with the custom artwork.
                 Check all that apply:  </p>
+                <div class=palabras>
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault"> Exposure to direct sunlight</label>
               <br>
@@ -655,6 +668,7 @@
               <span class="text-primary h5 me-2"></span>Other:
               <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
               <br>
+              </div>
               <p class="text" data-aos="fade-up" data-aos-duration="1400">You can also upload a photo of the space or spot you have in mind (optional):   <button mat-stroked-button="primary" >JPG, PNG, PDF</button>
               <br>
                 <div class="row align-items-center">
@@ -688,8 +702,9 @@
                   <!--end col-->
                 </div>
               </div>
-              <div class="main-content" *ngIf="Contenedorb4">
+              <div class="main-content clase " *ngIf="Contenedorb4">
               <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4b. Sweet, Indoors is a great shout.  What space did you have in mind?   </p>
+              <div class=palabras>
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault">Living room </label>
               <br>
@@ -705,6 +720,7 @@
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault">Foyer  </label>
               <br>
+              </div>
               <div class="row align-items-center">
                 <div class="col-12">
                   <div class="d-flex align-items-center justify-content-between">
@@ -736,12 +752,14 @@
                 <!--end col-->
               </div>
               </div>
-              <div class="main-content" *ngIf="Contenedorc4">
+              <div class="main-content clase" *ngIf="Contenedorc4">
               <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4c. Ooh lala, a versatile custom piece, how splendid.</p>
               <br>
+              <div class=palabras>
               <span class="text-primary h5 me-2"></span>Other:
               <textarea rows="2" cols="80" class="form-control" placeholder=""></textarea>  
               <br>
+              </div>
               <div class="row align-items-center">
                 <div class="col-12">
                   <div class="d-flex align-items-center justify-content-between">
@@ -773,12 +791,14 @@
                 <!--end col-->
               </div>
               </div>
-              <div class="main-content" *ngIf="Contenedord4">
+              <div class="main-content margen " *ngIf="Contenedord4">
               <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4d. Virtual, digital, dimensional, tell us more.  </p>
               <br>
+              <div class=palabras>
               <span class="text-primary h5 me-2"></span>Other:
               <textarea rows="2" cols="80" class="form-control" placeholder=""></textarea>  
               <br>
+              </div>
               <div class="row align-items-center">
                 <div class="col-12">
                   <div class="d-flex align-items-center justify-content-between">
