--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -83,7 +83,7 @@
                     <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">Let’s get started 🦑:</p>
                     
                 <ul data-aos="fade-up" data-aos-duration="1800">
-                  <li class="mb-0"><span class="text-primary h5 me-2"></span>Namesss:</li> 
+                  <li class="mb-0"><span class="text-primary h5 me-2"></span>Name:</li> 
                   <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                  <!-- <li class="mb-0"><span class="text-primary h5 me-2"></span>Name: <input type = "text" required> </li>-->
                   <li class="mb-0"><span class="text-primary h5 me-2"></span>Last Name:</li>
@@ -293,9 +293,11 @@
                  <br>
                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                  <label class="form-check-label" for="flexCheckDefault">Large (100cm x 110cm) </label>
-                 <br>
+                 
                  <span class="text-primary h5 me-2"></span>Other:
+                 <div class="main-content next" >
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
+                 </div>
                  <br>
                  </div>
                  <div class="row align-items-center">
@@ -312,7 +314,7 @@
                           <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
                           alt="">
                       </a>
-
+                      <div class="main-content boton">
                       <a class="text-dark align-items-center">
                         <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
                           alt="">
@@ -325,6 +327,7 @@
                           </svg></span>
                       </a>
                     </div>
+                  </div>
                   </div>
                   <!--end col-->
                 </div>
@@ -342,7 +345,10 @@
                  <label class="form-check-label" for="flexCheckDefault">Large (e.g., the size of a fridge)</label>
                  <br>
                  <span class="text-primary h5 me-2"></span>Other:
+                 <br>
+                 <div class="main-content next" >
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
+                 </div>
                  <br>
                  </div>
                  <div class="row align-items-center">
@@ -359,7 +365,7 @@
                           <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
                           alt="">
                       </a>
-
+                      <div class="main-content boton">
                       <a class="text-dark align-items-center">
                         <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
                           alt="">
@@ -376,6 +382,7 @@
                   <!--end col-->
                 </div>
                </div>
+               </div>
                <div class="main-content prueba" *ngIf="Contenedore2">
                  <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2e. What size of photography are you thinking? </p>
                  <div class=palabras>
@@ -389,7 +396,9 @@
                  <label class="form-check-label" for="flexCheckDefault">Large (A1: 59.4 x 84.1 cm)</label>
                  <br>
                  <span class="text-primary h5 me-2"></span>Other:
+                 <div class="main-content next" >
                  <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
+                 </div>
                  <br> 
                 </div>
                  <div class="row align-items-center">
@@ -406,7 +415,7 @@
                           <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
                           alt="">
                       </a>
-
+                      <div class="main-content boton">
                       <a class="text-dark align-items-center">
                         <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
                           alt="">
@@ -422,6 +431,7 @@
                   </div>
                   <!--end col-->
                 </div>
+               </div>
                </div>
                <div class="main-content clase" *ngIf="Contenedorf2">
                 <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2f. This sounds like a very special artwork, tell us more about it! Don’t forget to mention size:</p>
@@ -976,7 +986,7 @@
                       <a class="text-dark align-items-center">
                         <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
                           alt="">
-                          <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#7'">Next </a>
+                          <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#7'">SUBMIT FORM </a>
                         <span class="pro-icons"><svg xmlns="" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
@@ -1025,10 +1035,12 @@
     
             <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
-                <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">
-                  Thank you for submitting your MATERSANT custom art form. We’ll get back to you as soon as possible. 🐉
-                  In the meantime, take a look at the cool stuff we have in our shop.</h4>
+            
 
+                  <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">
+                  Thank you for submitting your MATERSANT custom art form. We’ll get back to you as soon as possible. 🐉
+                  In the meantime, take a look at the cool stuff we have in our <a href="https://matersant.ima.com.gt/" class="text-reset">Shop</a>.</h4>
+        
                 
                    
                    
