--- a/src/app/core/components/index-studio/index-studio.component.html
+++ b/src/app/core/components/index-studio/index-studio.component.html
@@ -1,11 +1,33 @@
+
+
+
 <!-- Hero Start -->
 <section class="main-slider" id="home">
     <div class="slider single-item">
         <owl-carousel-o id="customer-testi" [options]="customOptions">
             <ng-template carouselSlide>
                 <div class="bg-half-170 rounded-md" style="background: url('assets/images/shop/bg2.jpg') center center;">
+                    
                     <div class="container">
                         <div class="row align-items-center mt-5">
+                                           
+
+<!--Prueba-->
+
+<div class= "modal">
+    <div class ="contenido">
+        <h2>
+           <br>
+            Welcome! 
+            Thank you for visiting our digital space!💖		
+            Let’s make some magic 🌟
+            <br>
+        </h2>
+       <!-- <img src="assets/images/shop/bg2.jpg" alt ="">-->
+    </div>
+</div>
+
+<!--Prueba-->
                             <div class="col-lg-7 col-md-7">
                                 <div class="title-heading mt-4">
                                     <h1 class="display-4 title-white fw-bold mb-3">Titulo 1</h1>
