--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -98,9 +98,10 @@
             
                 </ul>
                 <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  
+                  <div class="main-content prueba" >
                   <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#2'">Next <i
                       class="uil uil-angle-right-b"></i></a>
+                    </div>
                 </div>
               </div>
             </div>
@@ -133,14 +134,11 @@
             <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">CUSTOM MADE -ART-</h4>
-                <p class="text-muted  " data-aos="fade-up" data-aos-duration="1400">2.What type of art are you interested in? </p>
+                <p class="text-muted  " data-aos="fade-up" data-aos-duration="1400">2.What type of art are you interested in?  * </p>
                    
-                        
+
           <!-- Radio Buttons Start -->
           <div class="col mt-4 pt-2" id="radio-buttons">
-            
-             
-
               <div class="p-4">
                 <div class="custom-control custom-radio custom-control-inline">
                   <div class="form-check mb-0">
