--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -98,7 +98,7 @@
             
                 </ul>
                 <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <div class="main-content prueba" >
+                  <div class="main-content pruebasBoton"  >
                   <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#2'">Next <i
                       class="uil uil-angle-right-b"></i></a>
                     </div>
