--- a/src/app/core/components/index-studio/index-studio.component.html
+++ b/src/app/core/components/index-studio/index-studio.component.html
@@ -1,8 +1,9 @@
 
 
-
 <!-- Hero Start -->
 <section class="main-slider" id="home">
+    
+
     <div class="slider single-item">
         <owl-carousel-o id="customer-testi" [options]="customOptions">
             <ng-template carouselSlide>
@@ -14,74 +15,41 @@
 
 <!--Prueba-->
 
+
 <div class= "modal">
-    
     <div class ="contenido">
-        <h2>
+        <h6>
            <br>
-            Welcome! 
+           
+           <!--  <input type = "checkbox" class="cerrar">
+            <label for=" cerrar" id= "btn-cerrar"></label>-->
+        
+           <div class="animated fadeOutLeftBig">
+           <div class="alert alert-dark" role="alert"  style background ="color: black !important;">Welcome! 
             Thank you for visiting our digital space!💖		
-            Let’s make some magic 🌟
+            Let’s make some magic 🌟 </div> 
+        </div>
+            <!--Welcome! 
+            Thank you for visiting our digital space!💖		
+            Let’s make some magic 🌟-->
             <br>
-        </h2>
+        </h6>
        <!-- <img src="assets/images/shop/bg2.jpg" alt ="">-->
     </div>
 </div>
 
 <!--Prueba-->
+
                             <div class="col-lg-7 col-md-7">
                                 <div class="title-heading mt-4">
                                     <h1 class="display-4 title-white fw-bold mb-3">Titulo 1</h1>
+                                  <!--  <input type ="checkbox" id ="cerrar">
+                                   <label for= "cerrar" id= "btn-cerrar">x</label>-->
                                     <p class="para-desc text-muted para-dark">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
                                     <a href="javascript:void(0)" data-bs-toggle="modal" class="btn btn-primary m-1"
-                                    (click)="Subscribeopen(Subscribecontent)">Welcome</a>
+                                   >Welcome</a>
                   
-                                          
-   <!-- Subscribe Modal Content Start -->
-              <ng-template #Subscribecontent let-modal>
-                <div class="modal-content rounded shadow border-0">
-                  <div class="modal-body p-0" style="background: url('assets/images/subscribe.png') no-repeat;">
-                    <button type="button" class="btn-close float-end m-1" aria-label="Close" (click)="modal.dismiss('Cross click')">
-                    </button>
-                    <div class="clearfix"></div>
-                    <div class="container-fluid px-0">
-                      <div class="row align-items-center g-0">
-                        <div class="col-lg-6 offset-lg-6">
-                          <div class="pb-5 pt-4 px-4">
-                            
-
-                            <h4>Welcome! 
-                                Thank you for visiting our digital space!💖		
-                                Let’s make some magic 🌟</h4>
-                           
-                            <form class="mt-4">
-                              <div class="row">
-                                
-                                <!--end col-->
-
-                            
-                                <!--end col-->
-
-                                <div class="col-12">
-                                  <div class="text-center">
             
-                                  </div>
-                                </div>
-                                <!--end col-->
-                              </div>
-                              <!--end row-->
-                            </form>
-                          </div>
-                        </div>
-                        <!--end col-->
-                      </div>
-                      <!--end row-->
-                    </div>
-                    <!--end container-->
-                  </div>
-                </div>
-              </ng-template>
-              <!-- Modal Content End -->
                 
                                     <div class="mt-4">
                                         <p>&nbsp;</p>
