--- a/src/app/core/components/aboutus-two/aboutus-two.component.html
+++ b/src/app/core/components/aboutus-two/aboutus-two.component.html
@@ -1,47 +1,17 @@
 
-<!-- Hero Start -->
-<section class="bg-half d-table w-100" id="home" style="background: url('assets/images/company/aboutus.jpg');">
-    <div class="bg-overlay"></div>
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-12 text-center">
-          <div class="page-next-level title-heading">
-            <h1 class="text-white title-dark"> About us </h1>
-            <div class="page-next">
-              <nav aria-label="breadcrumb" class="d-inline-block">
-                <ul class="breadcrumb bg-white rounded shadow mb-0">
-                  <li class="breadcrumb-item"> <a href="https://matersant.ima.com.gt/">Matersant</a></li>
-                  <li class="breadcrumb-item"><a href="https://materia.ima.com.gt/" >Materia Curada</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">About us</li>
-                </ul>
-              </nav>
-            </div>
-          </div>
-        </div>
-        <!--end col-->
+  
+  <section class="section" style="background-color: #e89f36" > 
+    
+    <div class="container"  >
+      <div class="main-content pruebasBoton"  >
+        <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"  style="color: black !important;" (click) = "touch(1);" >Spanish  </a>
+            <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" style="color: black !important;"(click) = "touch(2);">English </a>
       </div>
-      <!--end row-->
-    </div>
-    <!--end container-->
-  </section>
-  <!--end section-->
-  <div class="position-relative">
-    <div class="shape overflow-hidden text-white">
-      <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M0 48H1437.5H2880V0H2160C1442.5 52 720 0 720 0H0V48Z" fill="currentColor"></path>
-      </svg>
-    </div>
-  </div>
-  <!-- Hero End -->
-  
-  <section class="section">
-    <div class="container">
       <div class="row align-items-center" id="counter">
-        <div class="col-md-6">
-          <img src="assets/images/company/about2.png" class="img-fluid" alt="">
-        </div>
+        
         <!--end col-->
   
+    <div class="main-content clase"  *ngIf="ContenedorEnglish">
         <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
           <div class="ms-lg-4">
             <div class="d-flex mb-4">
@@ -51,7 +21,7 @@
             </div>
             <div class="section-title">
               <h4 class="title mb-4">Who we are ?</h4>
-              <p class="text-muted">MATERSANT is a conscious and innovative art house based on intention and fuelled by creative love & devotion.
+              <p class="text">MATERSANT is a conscious and innovative art house based on intention and fuelled by creative love & devotion.
 
                 Our journey began in Honduras, where our souls first connected profoundly to Mother Nature and our family’s pure love. 
                 
@@ -63,9 +33,44 @@
                 
                 </p>
               <a href="javascript:void(0)" class="btn btn-primary mt-3">Contact us</a>
+              
             </div>
           </div>
         </div>
+      </div>
+      <div class="main-content clase"  *ngIf="ContenedorSpanish">
+        <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
+          <div class="ms-lg-4">
+            <div class="d-flex mb-4">
+              <span class="text-primary h1 mb-0"><span class="counter-value display-1 fw-bold" [CountTo]="15" [from]="0"
+                  [duration]="4"></span>+</span>
+              <span class="h6 align-self-end ms-2">Years <br> Experience</span>
+            </div>
+            <div class="section-title">
+              <h4 class="title mb-4">¿Quienes Somos?</h4>
+              <p class="text">MATERSANT es una casa innovadora de arte consciente basada en la intención; Impulsada por la creatividad, el amor y la devoción.
+
+                Nuestro viaje comenzó en Honduras, donde nuestras almas se conectaron profundamente con la Madre Tierra y el amor puro de nuestra familia. 
+                
+                Después, la intuición nos llevó al otro lado del atlántico a sumergirnos en los océanos infinitos del arte, el diseño y la función.  
+                
+                Sin embargo, El Universo nos jaló de regreso a nuestra tierra precolombina ancestral en Centroamérica a conectar otra vez con aquello que es puro, simple y fundamental: El Universo mismo.
+                
+                De ahí en adelante, nuestra filosofía se ha moldeado para considerar el todo con el yo en todo lo que hacemos. 
+                
+                
+                
+                
+                </p>
+              <a href="javascript:void(0)" class="btn btn-primary mt-3">Contactanos</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
         <!--end col-->
       </div>
       <!--end row-->
