--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -12,3 +12,24 @@
     font-style: normal;
     font-weight: normal;
 }
+
+.color1{
+    background-color: #ca2311;
+    font-style: oblique;
+    color:white;
+}
+
+.color2{
+    background-color: #e89f36;
+    font-style: oblique;
+}
+
+.color3{
+    background-color: #2b2e91;
+    font-style: oblique;
+}
+
+.color4{
+    background-color: #4aac91;
+    font-style: oblique;
+}
