--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -61,35 +61,30 @@
                         </li>
                     </ul>
                 </li>
-                <li class="has-submenu">
-                    <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">SERVICES</a><span class="menu-arrow"></span>
-                    <ul class="submenu">
-                        <li class="nav-link-ref">
-                            <a href="javascript:void(0)" style="color: #6A1B9A !important;"  routerLink="/">IMAGE CONSULTING</a>
-                        </li>
-                        <li class="nav-link-ref">
-                            <a href="javascript:void(0)"  style="color: #2E7D32!important;"  routerLink="/">EXPERIENCE GURU</a>
-                        </li>
-                        <li class="nav-link-ref">
-                            <a href="javascript:void(0)"  style="color: #00838F !important;" routerLink="/">CREATIVE DIRECTION</a>
-                        </li>
-                    </ul>
-                </li>
+           
                 <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">SHOP</a><span class="menu-arrow"></span>
                     <ul class="submenu">
+                        <div class="main-content color1" >
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" style="color: #6A1B9A !important;" routerLink="/">MATERSANT</a>
+                            <a href="javascript:void(0)" style="color: white !important;" routerLink="/">MATERSANT</a>
                         </li>
+                        </div>
+                        <div class="main-content color2" >
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" style="color: #2E7D32!important;"  routerLink="/">MATERIA CURADA</a>
+                            <a href="javascript:void(0)" style="color: white!important;"  routerLink="/">MATERIA CURADA</a>
                         </li>
+                    </div>
+                    <div class="main-content color3" >
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" style="color: #00838F !important;"  routerLink="/">THE ISSUE</a>
+                            <a href="javascript:void(0)" style="color: white !important;"  routerLink="/">THE ISSUE</a>
                         </li>
+                    </div>
+                    <div class="main-content color4" >
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" style="color: #D84315 !important;" routerLink="/">ALL</a>
+                            <a href="javascript:void(0)" style="color: white !important;" routerLink="/">ALL</a>
                         </li>
+                    </div>
                     </ul>
                 </li>
 
@@ -110,10 +105,14 @@
                             <a href="javascript:void(0)" style="color: #D84315 !important;" routerLink="/">2021</a>
                         </li>
                     </ul>
-                </li>
+                </li> 
+               <!--  <li class="nav-link-ref">
+                    <a href="javascript:void(0)"   routerLink="/aboutus">ABOUT</a>
+                </li>-->
                 
-                <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
-            </ul>
+            <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
+           </ul>
+            
             <!--end navigation menu-->
             <!-- <div class="buy-menu-btn d-none">
                 <a href="javascript: void(0);" target="_blank" class="btn btn-primary">Buy Now</a>
