--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -61,8 +61,48 @@
                         </li>
                     </ul>-->
                 </li>
+
+                
+  <li class="has-submenu">
+    <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
+    <ul class="submenu megamenu">
+     
+     
+      <li>
+        <ul>
+          <li class="megamenu-head" style="color: #f50909 !important;"  >CASA MATERSANT</li>
+          <li><a class="nav-link-ref" routerLink="/shop-wall">Wall Art</a></li>
+          <li><a class="nav-link-ref" routerLink="/shop-furniture">Furniture</a></li>
+          <li><a class="nav-link-ref" routerLink="/matersant-decor">Home Decor</a></li>
+          <li><a class="nav-link-ref" routerLink="/matersant-finishing">Home Finishing</a></li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+         <br><br>
+          <li><a class="nav-link-ref" routerLink="/shop-accesories">Accesories</a></li>
+          <li><a class="nav-link-ref" routerLink="/shop-clothing">Clothing</a></li>
+          <li><a class="nav-link-ref" routerLink="/index-upcycle">Upcycled</a></li>
+        </ul>
+      </li>
+      
+    
+      <li>
+        <ul>
+          <li class="megamenu-head" style="color: #f50909 !important;" >  MATERIA CURADA</li>
+          <li><a class="nav-link-ref" routerLink="/materia-decor">Home Decor</a></li>
+          <li><a class="nav-link-ref" routerLink="/accesories-materia">Accesories + clothing</a></li>
+          <li><a class="nav-link-ref" routerLink="/art-materia">Art</a></li>
+          
+          <li class="megamenu-head" style="color: #f50909 !important;" >  CUSTOME-MADE</li>
+        </ul>
+      </li>
+    </ul>
+  </li>
+
+
            
-                <li class="has-submenu">
+              <!--  <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">PRODUCTS</a><span class="menu-arrow"></span>
                     <ul class="submenu">
                         <div class="main-content color1" >
@@ -86,7 +126,7 @@
                         </li>
                     </div>
                     </ul>
-                </li>
+                </li> -->
 
                 
              <!--    <li class="has-submenu">
@@ -111,7 +151,7 @@
                 </li>-->
                 
             <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
-            <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">CONTACT US</a> </li> <span class="menu-arrow"></span>
+            <li><a routerLink="/contactus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">CONTACT US</a> </li> <span class="menu-arrow"></span>
            </ul>
            
            
