--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -62,44 +62,52 @@
                     </ul>-->
                 </li>
 
-                
-  <li class="has-submenu">
-    <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
-    <ul class="submenu megamenu">
-     
-     
-      <li>
-        <ul>
-          <li class="megamenu-head" style="color: #f50909 !important;"  >CASA MATERSANT</li>
-          <li><a class="nav-link-ref" routerLink="/shop-wall">Wall Art</a></li>
-          <li><a class="nav-link-ref" routerLink="/shop-furniture">Furniture</a></li>
-          <li><a class="nav-link-ref" routerLink="/matersant-decor">Home Decor</a></li>
-          <li><a class="nav-link-ref" routerLink="/matersant-finishing">Home Finishing</a></li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-         <br><br>
-          <li><a class="nav-link-ref" routerLink="/shop-accesories">Accesories</a></li>
-          <li><a class="nav-link-ref" routerLink="/shop-clothing">Clothing</a></li>
-          <li><a class="nav-link-ref" routerLink="/index-upcycle">Upcycled</a></li>
-        </ul>
-      </li>
-      
-    
-      <li>
-        <ul>
-          <li class="megamenu-head" style="color: #f50909 !important;" >  MATERIA CURADA</li>
-          <li><a class="nav-link-ref" routerLink="/materia-decor">Home Decor</a></li>
-          <li><a class="nav-link-ref" routerLink="/accesories-materia">Accesories + clothing</a></li>
-          <li><a class="nav-link-ref" routerLink="/art-materia">Art</a></li>
+                <li class="has-submenu">
+                    <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
+                    <ul class="submenu megamenu">
+                      <li>
+                        <ul>
+                          <li class="megamenu-head"  style="color: red !important; ">CASA MATERSANT</li>
+                          <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
+                          <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
+                          <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
+                          <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
+                          <li><a class="nav-link-ref" routerLink="/shop-accesories">">CLOTHING + ACCESSORIES</a></li>
+                          <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
+                        </ul>
+                      </li>
           
-          <li class="megamenu-head" style="color: #f50909 !important;" >  CUSTOME-MADE</li>
-        </ul>
-      </li>
-    </ul>
-  </li>
-
+                      <li>
+                        <ul>
+                          <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
+                          <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
+                          <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
+                          <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <ul>
+                          <li class="megamenu-head"   style="color: #2b2d91 !important; " >PRODUCT DESIGN</li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-grid-three">CUSTOME-MADE</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <ul>
+                          <li class="megamenu-head"  style="color: #4aac91 !important; " >INTERIOR DESIGN</li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">BOOK AN APPOINTMENT</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <ul>
+                          <li class="megamenu-head" style="color: #051b06 !important; ">CUSTOME MADE</li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+          
+          
 
            
               <!--  <li class="has-submenu">
