--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,7 +4,7 @@
         <!-- Logo container-->
         <div>
             <a class="logo" href="https://matersant.ima.com.gt/" *ngIf="navClass !== 'nav-light'">
-                <img  src= "assets/images/logo-matersant.png "  class="l-dark logo-light-mode" height="60" alt="" >
+                <img  src= "assets/images/casa.png "  class="l-dark logo-light-mode" height="60" alt="" >
                 <span class="l-dark logo-light-mode" height="24" style="color: #020202 !important; font-size: 28px; font-family: 'PPEiko-Medium' !important;">MATERSANT</span>
                 <!-- <img src="assets/images/logo-dark.png" class="l-dark logo-light-mode" height="24" alt="">
                 <img src="assets/images/logo-light.png" class="logo-dark-mode" height="24" alt=""> -->
@@ -72,7 +72,7 @@
                           <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
                           <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
                           <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
-                          <li><a class="nav-link-ref" routerLink="/shop-accesories">">CLOTHING + ACCESSORIES</a></li>
+                          <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
                           <li><a class="nav-link-ref" routerLink="/index-upcycle">UPCYCLED</a></li>
                         </ul>
                       </li>
